# tg-bot-for-supermedoviki

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/: bot.py  config_reader.py
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/client_card/: addMark.py  qrbackgen.py
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/db/: database_handler.py  models.py
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/filtres/: role_filter.py  user_exists_filter.py
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/handlers/: admin.py  client.py  common.py
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/keyboards/: simple_row.py
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/resources/: menu.json
tg-bot-for-supermedoviki/tg_bot_for_supermedoviki/services/: information_handlers.py  message_deleter.py  sender.py
